# ChangeLog for dev-python/cryptography
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cryptography/ChangeLog,v 1.13 2014/05/08 22:02:34 mgorny Exp $

*cryptography-0.4-r1 (08 May 2014)

  08 May 2014; Michał Górny <mgorny@gentoo.org> +cryptography-0.4-r1.ebuild,
  -cryptography-0.2.1.ebuild, -cryptography-0.2.2.ebuild,
  -cryptography-0.3.ebuild, -cryptography-0.4.ebuild:
  Add a slot operator on dev-python/cffi dep (bug #506552), and make it
  conditional to CPython implementations (PyPy has built-in cffi). Drop old.

*cryptography-0.4 (07 May 2014)

  07 May 2014; Patrick Lauer <patrick@gentoo.org> +cryptography-0.4.ebuild:
  Bump

  03 Apr 2014; Tim Harder <radhermit@gentoo.org> cryptography-0.2.2.ebuild,
  cryptography-0.3.ebuild:
  Sync ~arm keywords.

*cryptography-0.3 (03 Apr 2014)

  03 Apr 2014; Tim Harder <radhermit@gentoo.org> +cryptography-0.3.ebuild:
  Version bump, add python3_4 support.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> cryptography-0.2.1.ebuild,
  cryptography-0.2.2.ebuild:
  Add support for the new PyPy slotting.

  22 Mar 2014; Markos Chandras <hwoarang@gentoo.org> cryptography-0.2.2.ebuild:
  Add ~mips. Bug #503094

  22 Mar 2014; Markus Meier <maekke@gentoo.org> cryptography-0.2.1.ebuild:
  add ~arm, bug #503094

*cryptography-0.2.2 (15 Mar 2014)

  15 Mar 2014; Tim Harder <radhermit@gentoo.org> +cryptography-0.2.2.ebuild:
  Version bump.

  04 Mar 2014; Naohiro Aota <naota@gentoo.org> cryptography-0.2.1.ebuild:
  Add ~x86-fbsd wrt bug #503094

  03 Mar 2014; Jeroen Roovers <jer@gentoo.org> cryptography-0.2.1.ebuild:
  Marked ~hppa (bug #503094).

  01 Mar 2014; Tim Harder <radhermit@gentoo.org> cryptography-0.2.1.ebuild:
  Add pypy2_0 support.

  01 Mar 2014; Tim Harder <radhermit@gentoo.org> cryptography-0.2.1.ebuild:
  Fix deps.

*cryptography-0.2.1 (01 Mar 2014)

  01 Mar 2014; Tim Harder <radhermit@gentoo.org> +cryptography-0.2.1.ebuild,
  +metadata.xml: