@@ -2,25 +2,13 @@
 Hash: SHA256
 
 DIST cryptography-0.4.tar.gz 260891 SHA256 5ef81de44c87a87779710cbb476ffbec86a4a6c0bd2a5bebeccc3bfb3c3478e5 SHA512 1eb85e650ea267a36e337bea39cd20592fa1c56b84ede3008a79e4917731efd8f23a997c190e0db4a63ff1c4c761e84f71b3e2030a12079f055a2cfc3f52852d WHIRLPOOL 287879435cb90cfd68d40e5931537b9692c0396e5a8274570fb94c916a048ed9fc91b9b3b24ea2e6a453d535a6311f1e74f528c42ed70b7884b3176a7defae6d
-EBUILD cryptography-0.4-r1.ebuild 1133 SHA256 8974e47e314dff6f3692d33a2c45b32cbc31266e479235490d6c6431fb543d50 SHA512 c6ee20fc3c9642f6a808912a99f4ab7da9a988b45ebeea7a9c1d16ea34683d9677b5ecdeb64ba08f90edbfdba09bd5455d2b0bdebd53850d0d76ef67b9a1d927 WHIRLPOOL e5252fa19c85cc62bd7535a87bbf3c1296af781ee5b1c1ff3cb7847ce6a2a632499a374dfc0c11442a7543a1dacd6711e3ad5a4707ec3aee21d2deac67ce0048
-MISC ChangeLog 2019 SHA256 f64bb323745dbd77bf2228b66409630daac86766e31705c051ee6c874fc36be9 SHA512 d7e254fa859774d3bb29ee8750c6757b9245ce9c721b7255679177d7aae1cdcfc12ae7e6f9f8227b1e68382ab8d2b163e764f2c64da0350ed4ad7a965beac221 WHIRLPOOL 502989a8cdbccc05eac88493f14eb3254a84054168605a51add9299aa2162f19d595aa5dc5aca4b741af797770ede155f710b6f7f73d78f3ea2eccbe51f04918
+EBUILD cryptography-0.4-r1.ebuild 1168 SHA256 77782b84f8bd128ae9d3d224ff3e8da1ddfe19da4a532fe8eb937bfa0f12c2da SHA512 fccf2d80cd6d2f67d1cb765d7e6c2acc60f63131fcdf9dcd31cba372a4054d69ef7dce86dd1509e20381f3627b529800532599fb89c5a6f0c70b08c810f09b3f WHIRLPOOL c84a8842519a4822326ec2a05ea8816644af1fddcceb7b2542321285c6cae2f74f54f1505b3afa48ba6f041020be4bcbb31b29d290bf976bf3bd8cab8f70ef64
+MISC ChangeLog 2130 SHA256 bee331625e91cfa591da7ef9ef097cfcaa0d94eba045de39b8082c3dec270c4d SHA512 49f78baf7551a70aa0111b788d84a9f2823146789f88a767fc45bd9d63b2cb6ea25c31b6abe69d0d930a0896b1de439ba80241d9ff1ac1ef991b316756a5fdbc WHIRLPOOL f7c657b0542877967b25a30dbd95db1db046f664e1953f86d324c1418d00207a2a37687c8c04b34aabc6c467ee9ab97f01eeb8aebbe26370281bdff078d9da6b
 MISC metadata.xml 235 SHA256 ed253d917bfdfb8c5311727f3d2e0da8e286e312082228f2fc2b363e54b9fc8a SHA512 a8cdfe62f3aa329708c4361281dc82d395a917c812dbf22f324bfb75c4f9df15a0759d397c28ee3189a0e2ceb48f6a537d7b11983b7cc9f3fa9dd154d04f147f WHIRLPOOL 4287962b1291e7d9e2e5ae11b7e38c0979793e945667c9e1c243d2fe9c8273b7251a0ef44647e8b4d70146104af59a1a88d473368c387dadb4f35981c3d6c700
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTa/77XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOzp8QAMIu9wVPoBAOd6JqJZFHbenw
-PqjVA+LrJwshg3exd0B2pD03XKVaTMPc2Y2BQ9h1wmNQLiFOmnPrqzLe38Ep8mH5
-eUsSMFyt3OF+bgsZw70OMDoBJIgI+JkBiTJ8PJZsznU0ByermioQdfAbqqs66mx0
-IBmM7957xWF/Lzry75E4t4OGFaDRrsw7Ub9oQ7WcueF/h00M2nF4YWZc5OKxqYv4
-l/hTAIKRW/dJAHVOs6cAqSNLPkZ9EOSDPJox4NwkVTgq3ISbzNXAg65yoj2rE4PY
-dohyeBNnogEeDlUw4UZxbvJ69wvtJrA/wxzf4ZHXulWMuItim6Mf0ftW4O7h1oZ7
-IlpKzkkM/hlcOGRQNDuBixepBTCHuBq5q19l/dYGJi70pVha76JwWGnwMfupfX3F
-XMbYUBVPMzqF6leNx88W7M5fCew8ztIp6izk6eF43WYEwUWgQR0n1Ic1R8LP6VyB
-8xN1owDk1MPDaUWxN7T9jZ76o+CcMoQb/0kj9Ph+JtDeM6kUZLRSjg2spg8pmCoY
-W3QdiyopkOdNhgvHQHD+jCHo5drYyuzSfcAJRG/pYRZ3TONFWZALiCm+KM5OAq+r
-YroU9R6WC44bHXDFa/4Ny+Izfg3RpmRzv1HP5uPLqjMqDG6nFIK5SXrEGMefKBS0
-fh4/7VTRoh2woLdfLQIi
-=hZhU
+iEYEAREIAAYFAlNt1LYACgkQso7CE7gHKw0yzACgkAY8z6WmvnETotCkvcAc2hCd
+MVAAn045rA1C328c38/tFA212Wg9Zhvh
+=p9tL
 -----END PGP SIGNATURE-----
